--- a/delivery/assets/pages/zakudyaHome.html
+++ b/delivery/assets/pages/zakudyaHome.html
@@ -52,7 +52,9 @@
       </div>
     </nav>
 
-    <div class="p-3 mb-2 bg-dark text-white"><h1>Blantyre City</h1></div>
+    <div class="p-3 mb-2 bg-dark text-white">
+      <h1>Restaurants near your area</h1>
+    </div>
     <div class="bg-secondary bg-gradient" style="text-align: center">
       <h2>Top Restaurants</h2>
     </div>
@@ -60,7 +62,7 @@
       <!-- Restaurant Card 1 -->
       <a href="cart.html">
         <div class="restaurant-card">
-          <img src="../img/restaurant6.jpg" alt="Restaurant 1" />
+          <img src="../img/restaurant.jpg" alt="Restaurant 1" />
           <div class="restaurant-info">
             <div class="restaurant-name">Tadyani Kitchen</div>
             <div class="cuisine-type">Mini Restaurant (20-45min)</div>
@@ -71,110 +73,48 @@
           </div>
         </div>
       </a>
-
       <!-- Restaurant Card 2 -->
-      <div class="restaurant-card">
-        <img src="../img/restaurant5.jpg" alt="Restaurant 2" />
-        <div class="restaurant-info">
-          <div class="restaurant-name">Spicy Delights</div>
-          <div class="cuisine-type">Malawian Cuisine</div>
+      <a href="cart.html">
+        <div class="restaurant-card">
+          <img src="../img/restaurant2.jpg" alt="Restaurant 1" />
+          <div class="restaurant-info">
+            <div class="restaurant-name">Cloud 9</div>
+            <div class="cuisine-type">large Restaurant (20-45min)</div>
+            <div class="rating">
+              <i class="fa-solid fa-star"></i> 4.1 Very Good(700+)
+            </div>
+            <div class="delivery">1km.K150 delivery</div>
+          </div>
         </div>
-      </div>
-      <!-- Restaurant Card 3 -->
-      <div class="restaurant-card">
-        <img src="../img/restaurant6.jpg" alt="Restaurant 2" />
-        <div class="restaurant-info">
-          <div class="restaurant-name">Spicy Delights</div>
-          <div class="cuisine-type">Malawian Cuisine</div>
+      </a>
+
+      <!-- Restaurant Card 1 -->
+      <a href="cart.html">
+        <div class="restaurant-card">
+          <img src="../img/restaurant4.jpg" alt="Restaurant 1" />
+          <div class="restaurant-info">
+            <div class="restaurant-name">Lima24/7</div>
+            <div class="cuisine-type">Medium Restaurant (20-45min)</div>
+            <div class="rating">
+              <i class="fa-solid fa-star"></i> 4.5 Very Good(400+)
+            </div>
+            <div class="delivery">1km.K170 delivery</div>
+          </div>
         </div>
-      </div>
-      <!-- Restaurant Card 4 -->
-      <div class="restaurant-card">
-        <img src="../img/restaurant.jpg" alt="Restaurant 2" />
-        <div class="restaurant-info">
-          <div class="restaurant-name">Spicy Delights</div>
-          <div class="cuisine-type">Malawian Cuisine</div>
-        </div>
-      </div>
+      </a>
     </main>
 
     <!-- Another food category -->
     <div class="bg-secondary bg-gradient" style="text-align: center">
       <h2>Chakulamba</h2>
     </div>
-    <main>
-      <!-- Restaurant Card 1 -->
-      <div class="restaurant-card">
-        <img src="../img/restaurant8.jpg" alt="Restaurant 2" />
-        <div class="restaurant-info">
-          <div class="restaurant-name">Spicy Delights</div>
-          <div class="cuisine-type">Malawian Cuisine</div>
-        </div>
-      </div>
-      <!-- Restaurant Card 2 -->
-      <div class="restaurant-card">
-        <img src="../img/restaurant2.jpg" alt="Restaurant 2" />
-        <div class="restaurant-info">
-          <div class="restaurant-name">Spicy Delights</div>
-          <div class="cuisine-type">Malawian Cuisine</div>
-        </div>
-      </div>
-      <!-- Restaurant Card 3 -->
-      <div class="restaurant-card">
-        <img src="../img/restaurant.jpg" alt="Restaurant 2" />
-        <div class="restaurant-info">
-          <div class="restaurant-name">Spicy Delights</div>
-          <div class="cuisine-type">Malawian Cuisine</div>
-        </div>
-      </div>
-      <!-- Restaurant Card 4 -->
-      <div class="restaurant-card">
-        <img src="../img/restaurant4.jpg" alt="Restaurant 2" />
-        <div class="restaurant-info">
-          <div class="restaurant-name">Spicy Delights</div>
-          <div class="cuisine-type">Malawian Cuisine</div>
-        </div>
-      </div>
-    </main>
+    <main>comming soon</main>
 
     <!-- Another food category -->
     <div class="bg-secondary bg-gradient" style="text-align: center">
       <h2>Msika wa Njala</h2>
     </div>
-    <main>
-      <!-- Restaurant Card 1 -->
-      <div class="restaurant-card">
-        <img src="../img/restaurant5.jpg" alt="Restaurant 2" />
-        <div class="restaurant-info">
-          <div class="restaurant-name">Spicy Delights</div>
-          <div class="cuisine-type">Malawian Cuisine</div>
-        </div>
-      </div>
-      <!-- Restaurant Card 2 -->
-      <div class="restaurant-card">
-        <img src="../img/restaurant5.jpg" alt="Restaurant 2" />
-        <div class="restaurant-info">
-          <div class="restaurant-name">Spicy Delights</div>
-          <div class="cuisine-type">Malawian Cuisine</div>
-        </div>
-      </div>
-      <!-- Restaurant Card 3 -->
-      <div class="restaurant-card">
-        <img src="../img/restaurant5.jpg" alt="Restaurant 2" />
-        <div class="restaurant-info">
-          <div class="restaurant-name">Spicy Delights</div>
-          <div class="cuisine-type">Malawian Cuisine</div>
-        </div>
-      </div>
-      <!-- Restaurant Card 4 -->
-      <div class="restaurant-card">
-        <img src="../img/restaurant5.jpg" alt="Restaurant 2" />
-        <div class="restaurant-info">
-          <div class="restaurant-name">Spicy Delights</div>
-          <div class="cuisine-type">Malawian Cuisine</div>
-        </div>
-      </div>
-    </main>
+    <main>comming soon</main>
 
     <!-- THE PAGE FOOTER -->
     <footer class="footer">
