--- a/delivery/assets/pages/RoutingOrderTrack.html
+++ b/delivery/assets/pages/RoutingOrderTrack.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Map Routing</title>
-
     <!-- custom css -->
     <link rel="stylesheet" href="../css/RoutingTrack.css" />
     <!-- BOOTSTRAP  -->
@@ -68,6 +67,9 @@
     <header class="d-flex justify-content-center align-items-center py-3">
       <h2 style="font-weight: bold">The route from you to the Restaurant</h2>
     </header>
+    <h5 class="d-flex justify-content-center align-items-center py-3">
+      Your location will be shared to our riders for delivery.
+    </h5>
 
     <div class="container-fluid">
       <div class="row">
