--- a/delivery/assets/pages/deliveryagent.html
+++ b/delivery/assets/pages/deliveryagent.html
@@ -84,7 +84,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="justify-content-center align-items-center">
-          <h2 class="text-center fw-bold">Welcome The panda king Rider</h2>
+          <h2 class="text-center fw-bold">Welcome TPKfood Delivery agent</h2>
         </div>
         <!-- class="rounded-div col-lg-9 col-md-9 col-sm-12 col-xs-12 d-flex justify-content-center align-items-center rounded-lg overflow-hidden p-3 mx-auto" -->
       </div>
