--- a/delivery/assets/pages/RoutingOrderTrack.html
+++ b/delivery/assets/pages/RoutingOrderTrack.html
@@ -74,6 +74,7 @@
         type="text"
         id="randomNumberInput"
         placeholder="Random Number"
+        disabled
       />
     </div>
 
