--- a/delivery/assets/pages/riderouting.html
+++ b/delivery/assets/pages/riderouting.html
@@ -65,7 +65,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">TPKFood</a>
+        <a class="navbar-brand" href="../pages/deliveryagent.html">TPKFood</a>
         <a class="navbar-brand" href="deliveryagent.html">Delivery Home</a>
         <button
           class="navbar-toggler"
